[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/scratch_3.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/scratch_1.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/scratch_2.png" type="Texture" id=3]
[ext_resource path="res://assets/scripts/area_damage.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": false,
"name": "default",
"speed": 8.0
} ]

[node name="AreaDamage" type="Area2D"]
modulate = Color( 1, 0, 0, 1 )
collision_layer = 4
collision_mask = 4
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
speed_scale = 1.5
[connection signal="body_entered" from="." to="." method="_on_AreaDamage_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
